--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "index.js",
-    "dev": "nodemon index.js"
-  },
+  "start": "node server.js",
+  "server": "nodemon server.js"
+},
   "author": "",
   "license": "ISC",
   "devDependencies": {
